<resources>
    <string name="app_name">Store Finder</string>
    <string name="your_address">Your Address</string>
    <string name="miles">Miles</string>
    <string name="kilometers">Kilometers</string>
    <string name="find_closest_store">Find Closest Store</string>
    <string name="by_zip_code">By Zip Code</string>
    <string name="by_address">By Address</string>
    <string name="an_error_occurred">An Error Occurred</string>
    <string name="closest_store">The Closest Store is %1$s with a distance of %2$s</string>

    <string name="error_title">Error</string>
    <string name="empty_address_error">The Address field cannot be empty</string>
</resources>